welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:20: error: type mismatch;
 found   : Unit
 required: Boolean
	while (!estSurBiscuit) {avance() 
        ^