welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def isFacingTrail():Boolean = {
	var x:Boolean = false
	if (!estFaceMur()) {
		
	
		avance() ;
	
	if (getCouleurSol==Color.green) {
		recule();
		x=true;
	}else{
		recule(); }
	}
	
		return x ; 
	}
	
def hunt():Boolean = { 
	while (!estSurBiscuit) {avance() 
	if (isFacingTrail) {
		avance() ;
		baisseBrosse();
		
	}else{
		gauche();
		
	}

	}	
}
